--- a/.github/workflows/dotnet-beta.yml
+++ b/.github/workflows/dotnet-beta.yml
@@ -27,6 +27,6 @@ jobs:
     - name: Test
       run: dotnet test --no-build --verbosity normal
     - name: Pack
-      run: dotnet pack --output ./packages --no-build --no-restore
+      run: dotnet pack --output . --no-build --no-restore
     - name: Push
-      run: dotnet nuget push /home/runner/work/am.kon.packages.services.web-client-service/am.kon.packages.services.web-client-service/packages/am.kon.packages.services.web-client-service.0.1.0-beta1.nupkg --api-key ${{ secrets.NUGET_PUBLISH_SECRET }} --source https://api.nuget.org/v3/index.json --skip-duplicate
+      run: dotnet nuget push *.nupkg -s --api-key ${{ secrets.NUGET_PUBLISH_SECRET }} --source https://api.nuget.org/v3/index.json --skip-duplicate
