--- a/.github/workflows/dotnet-beta.yml
+++ b/.github/workflows/dotnet-beta.yml
@@ -29,4 +29,4 @@ jobs:
     - name: Pack
       run: dotnet pack  --configuration Release
     - name: Push
-      run: dotnet nuget push /home/runner/work/am.kon.packages.services.web-client-service/am.kon.packages.services.web-client-service/src/am.kon.packages.services.web-client-service/bin/Release/*.nupkg -s --api-key ${{ secrets.NUGET_PUBLISH_SECRET }} --source https://api.nuget.org/v3/index.json --skip-duplicate
+      run: dotnet nuget push /home/runner/work/am.kon.packages.services.web-client-service/am.kon.packages.services.web-client-service/src/am.kon.packages.services.web-client-service/bin/Release/*.nupkg --api-key ${{ secrets.NUGET_PUBLISH_SECRET }} --source https://api.nuget.org/v3/index.json --skip-duplicate
